# liquid-loop

./: .gitignore  .release_config.example  CHANGELOG.md  LICENSE  README.md  pyproject.toml  release.sh  知乎文章_液环技术文.md  论文初稿.md
.github/workflows/: publish.yml
docs/: AUDIT_RESPONSE_v0.7.1.md  液环论文框架.md
docs/assets/: README.md
douyin-promo/: build_promo.py  build_v9.py  script.md
examples/: quickstart.py
examples/experiments/: REPORT_v0.8.json  REPORT_v0.9.json  common.py  e1_drift.py  e2_recovery.py  e3_conflict.py  run_all.py
examples/trae_mesh_mcp/: README.md  cleanup_stress.py  mcp_server.py  stress_test.py
liquid/: __init__.py  __main__.py  cli.py  entropy.py  storage.py  workspace.py
liquid_loop/: __init__.py  cli.py  cognitive_budget.py  entropy.py  selfspin.py  storage.py  workspace.py
liquid_loop/mesh/: __init__.py  v2.py
mesh/: liquid_loop_mesh_paper.tex  liquid_loop_mesh_v2.py  liquid_loop_mesh_v2_spec.md
mesh/audit/: audit_stress.py  concurrency_test.py  穿透式诊断审计报告.md
tests/: test_auth_guard.py  test_consensus_expansion.py  test_entropy.py  test_layer1_persistence.py  test_nucleate_dual_track.py  test_peek_seal.py  test_seal_persistence.py  test_self_evolve.py  test_workspace.py
