[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "liquid-loop"
version = "0.5.4"
description = "Self-Organizing Cognitive Memory for AI Agents — Liquid Loop theory implementation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "fishbook0001"}
]
maintainers = [
    {name = "fishbook0001"}
]
keywords = [
    "agent-memory",
    "cognitive-architecture",
    "self-organizing",
    "liquid-loop",
    "entropy",
    "ai-agents",
    "memory-management"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/fishbook0001/liquid-loop"
Repository = "https://github.com/fishbook0001/liquid-loop"
Documentation = "https://github.com/fishbook0001/liquid-loop#readme"
Issues = "https://github.com/fishbook0001/liquid-loop/issues"
Changelog = "https://github.com/fishbook0001/liquid-loop/blob/main/CHANGELOG.md"

[project.scripts]
liquid-loop = "liquid_loop.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["liquid_loop*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.yaml", "*.yml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "T20"]
ignore = ["S101", "T201"]
exclude = [".git", "__pycache__", "dist", "build", "*.egg-info"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true